<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cade_blue"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/anim_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/desc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fade"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/move"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@color/sea_green"
        android:text="@string/fade" />

    <Button
        android:id="@+id/zoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fade"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/sea_green"
        android:text="@string/zoom" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/move"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/action"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/database" />

    <Button
        android:id="@+id/rotate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zoom"
        android:layout_alignParentRight="true"
        android:background="@color/sea_green"
        android:text="@string/rotate" />

    <Button
        android:id="@+id/move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zoom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/sea_green"
        android:text="@string/navigate" />

</RelativeLayout>