<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/moveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_seagreen"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/desc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/web" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@color/light_seagreen"
        android:text="@string/start"
        android:layout_marginBottom="3dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/flip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/light_seagreen"
        android:text="@string/flip"
        android:layout_marginBottom="3dp" 
        android:layout_weight="1"/>

    <Button
        android:id="@+id/bounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_seagreen"
        android:text="@string/bounce"
         android:layout_weight="1"/>

</LinearLayout>